fix z-index

--- a/src/styles/Blog.module.scss
+++ b/src/styles/Blog.module.scss
@@ -23,6 +23,7 @@
   @include container;
   padding-top: 3rem;
   padding-bottom: 5rem;
+  z-index: 0;
 
   @include smartphone {
     padding-top: 3rem;
